--- a/README
+++ b/README
@@ -3,6 +3,7 @@ Rebecca Gieseking, 2023
 
 In summer 2020, with the help of James Stewart, I incorporated INDO/CI into the public release of 
 MOPAC2016. This repository contains several useful analysis scripts for INDO/CI calculations.
+All scripts are written in Python 3.
 
 
 Background:
